<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/legend_layout"
    android:background="@color/Ivory">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/legend_checkboxes"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp">

        <CheckBox
            android:id="@+id/redcross_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legendheight"
            android:text="" />

        <CheckBox
            android:id="@+id/firestation_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legendheight"
            android:text="" />

        <CheckBox
            android:id="@+id/hospital_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legendheight"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/legend_labels"
        app:layout_constraintRight_toLeftOf="@+id/legend_images">

        <TextView
            android:id="@+id/redcross_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legendheight"
            android:ems="10"
            android:text="@string/redcross_text"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/firestation_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legendheight"
            android:ems="10"
            android:text="@string/firestation_text"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/hospital_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legendheight"
            android:ems="10"
            android:text="@string/hospital_text"
            android:textAlignment="center"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/legend_images"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toLeftOf="@+id/legend_checkboxes"
        android:layout_marginRight="0dp">

        <ImageView
            android:id="@+id/redcross_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/legendheight"
            android:layout_weight="1"
            app:srcCompat="@color/colorAccent"
            android:gravity="center"
            android:layout_gravity="center"
            android:contentDescription="@string/redcross_image" />

        <ImageView
            android:id="@+id/firestation_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/legendheight"
            android:layout_weight="1"
            app:srcCompat="@color/colorAccent"
            android:gravity="center"
            android:layout_gravity="center"
            android:contentDescription="@string/firestation_image" />

        <ImageView
            android:id="@+id/hospital_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/legendheight"
            android:layout_weight="1"
            app:srcCompat="@color/colorAccent"
            android:gravity="center"
            android:layout_gravity="center"
            android:contentDescription="@string/hospital_image" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>